--- a/README.org
+++ b/README.org
@@ -69,6 +69,7 @@ This is an attempt to put my nix files in this org-mode file
       system = "x86_64-linux";
       config = {
         allowUnfree = true;
+        allowUnfreePredicate = (pkg: true);
       };
     };
   in
@@ -572,6 +573,22 @@ sops = {
 Install packages that are system wide. Things like neovim wget emacs git
 
 #+begin_src nix :tangle configuration.nix
+#need to add dynamic libraries so that zen-browser can find correct library paths
+  programs.nix-ld.enable = true;
+  programs.nix-ld.libraries = with pkgs; [
+    # Add any missing dynamic libraries here
+    # Use ldd on the original binary to find missing libraries
+    # Example:
+    glibc
+    libGL
+    xorg.libXt
+    dbus-glib
+    nss
+    ttf2pt1
+    noto-fonts
+    ffmpeg
+  ];
+
 environment.systemPackages = with pkgs; [
   #  vim # Do not forget to add an editor to edit configuration.nix! The Nano editor is also installed by default.
     wget
@@ -748,6 +765,7 @@ file:/home/andrew/nix-flakes/zen-browser/flake.nix
         inherit system;
         config = {
         allowUnfree = true;
+        allowUnfreePredicate = (pkg: true);
         };
       };
 
@@ -756,7 +774,7 @@ file:/home/andrew/nix-flakes/zen-browser/flake.nix
         stdenv.cc.cc fontconfig libxkbcommon zlib freetype
         gtk3 libxml2 dbus xcb-util-cursor alsa-lib libpulseaudio pango atk cairo gdk-pixbuf glib
         udev libva mesa libnotify cups pciutils
-        ffmpeg libglvnd pipewire
+        ffmpeg libglvnd pipewire fontconfig noto-fonts fontconfig.lib
       ] ++ (with pkgs.xorg; [
         libxcb libX11 libXcursor libXrandr libXi libXext libXcomposite libXdamage
         libXfixes libXScrnSaver
@@ -782,36 +800,46 @@ file:/home/andrew/nix-flakes/zen-browser/flake.nix
           tar -xf $src --strip-components=1
 
             # Create destination directories
-  mkdir -p $out/bin
-  mkdir -p $out/share/applications/
-  mkdir -p $out/share/icons/hicolor/128x128/apps/
+             mkdir -p $out/bin
+             mkdir -p $out/share/applications/
+             mkdir -p $out/share/icons/hicolor/128x128/apps/
 
-  # Install browser binaries
-  cp -r * $out/bin/
+             # Install browser binaries
+             cp -r * $out/bin/
 
-  # Copy desktop file to the build directory and then modify it
-  cp "$desktopSrc/zen.desktop" ./zen.desktop
+             # Copy desktop file to the build directory and then modify it
+             cp "$desktopSrc/zen.desktop" ./zen.desktop
 
-  substituteInPlace ./zen.desktop \
-    --replace "Exec=zen" "Exec=$out/bin/zen"
+             substituteInPlace ./zen.desktop \
+             --replace "Exec=zen" "Exec=$out/bin/zen"
 
-  # Install the modified desktop file
-  install -m644 ./zen.desktop $out/share/applications/
+             # Install the modified desktop file
+             install -m644 ./zen.desktop $out/share/applications/
 
-  # Install the icon
-  install -m644 $out/bin/browser/chrome/icons/default/default128.png $out/share/icons/hicolor/128x128/apps/zen.png
-'';
+             # Install the icon
+             install -m644 $out/bin/browser/chrome/icons/default/default128.png $out/share/icons/hicolor/128x128/apps/zen.png
+             '';
 
         dontPatchELF = true;
 
         preFixup = ''
-          patchelf --set-interpreter "$(cat ${pkgs.stdenv.cc.libc}/nix-support/dynamic-linker)" $out/bin/zen
-          wrapProgram $out/bin/zen \
-            --set MOZ_LEGACY_PROFILES 1 \
-            --set MOZ_ALLOW_DOWNGRADE 1 \
-            --set MOZ_APP_LAUNCHER zen \
-            --prefix LD_LIBRARY_PATH : "${pkgs.lib.makeLibraryPath runtimeLibs}"
-        '';
+        # The original tarball contains an executable, not a launcher.
+    # So we directly patch the main executable.
+    # Set the dynamic linker for the main executable
+    patchelf --set-interpreter "$(cat ${pkgs.stdenv.cc.libc}/nix-support/dynamic-linker)" $out/bin/zen
+
+           # Set the RPATH for the executable to include all runtime libraries
+    patchelf --set-rpath "${pkgs.lib.makeLibraryPath runtimeLibs}" $out/bin/zen
+
+           # The executable needs to be wrapped so that it knows about the
+    # library paths for its own inner workings.
+    # We use wrapProgram to create a wrapper script for the executable.
+    wrapProgram $out/bin/zen \
+              --set MOZ_LEGACY_PROFILES 1 \
+          --set MOZ_ALLOW_DOWNGRADE 1 \
+          --set MOZ_APP_LAUNCHER zen \
+          --prefix LD_LIBRARY_PATH : "${pkgs.lib.makeLibraryPath runtimeLibs}"
+          '';
 
         meta = with pkgs.lib; {
           description = "Zen Browser";
