--- a/README.org
+++ b/README.org
@@ -673,7 +673,7 @@ services.emacs = {
     enable = true;
     user = "andrew";
     group = "users";
-    storagePath = "/media/"
+    storagePath = "/media/";
     webui = {
         enable = true;
         listen = "127.0.0.1:8888"
