--- a/README.org
+++ b/README.org
@@ -676,7 +676,7 @@ services.emacs = {
     storagePath = "/media/";
     webui = {
         enable = true;
-        listen = "127.0.0.1:8888"
+        listen = "127.0.0.1:8888";
         };
   };
 
