--- a/README.org
+++ b/README.org
@@ -190,7 +190,7 @@ This is an attempt to put my nix files in this org-mode file
     qbittorrent
     resilio-sync
 
-    floorp
+    floorp-bin
 
     #video plugins
     mpv
@@ -790,7 +790,9 @@ file:/home/andrew/nix-flakes/zen-browser/flake.nix
         stdenv.cc.cc fontconfig libxkbcommon zlib freetype
         gtk3 libxml2 dbus xcb-util-cursor alsa-lib libpulseaudio pango atk cairo gdk-pixbuf glib
         udev libva mesa libnotify cups pciutils
-        ffmpeg libglvnd pipewire fontconfig noto-fonts fontconfig.lib
+        ffmpeg libglvnd pipewire fontconfig noto-fonts fontconfig.lib harfbuzz icu libthai fribidi
+        gtk3 adwaita-icon-theme gnome-themes-extra
+
       ] ++ (with pkgs.xorg; [
         libxcb libX11 libXcursor libXrandr libXi libXext libXcomposite libXdamage
         libXfixes libXScrnSaver
@@ -859,6 +861,8 @@ file:/home/andrew/nix-flakes/zen-browser/flake.nix
     --prefix LD_LIBRARY_PATH : "${pkgs.lib.makeLibraryPath runtimeLibs}" \
     --set FONTCONFIG_FILE "${pkgs.fontconfig.out}/etc/fonts/fonts.conf" \
     --set FONTCONFIG_PATH "${pkgs.fontconfig.out}/etc/fonts"
+    --set GTK_THEME Adwaita \
+    --set XDG_DATA_DIRS "$XDG_DATA_DIRS:${pkgs.adwaita-icon-theme}/share:${pkgs.gnome-themes-extra}/share"
 '';
     
         meta = with pkgs.lib; {
@@ -1167,9 +1171,7 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-}
+
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
